--- a/.github/workflows/ERFR-data.yml
+++ b/.github/workflows/ERFR-data.yml
@@ -26,7 +26,7 @@ jobs:
             ggplot2
             lubridate
             purrr
-            tidy
+            tidyr
             janitor
             openxlsx
             plotly
