--- a/.github/workflows/ERFR-data.yml
+++ b/.github/workflows/ERFR-data.yml
@@ -32,6 +32,8 @@ jobs:
         run: Rscript pit_antenna_dashboard_data.R
 
       - name: Commit updated data
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
